--- a/cutecats/package.json
+++ b/cutecats/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.1",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
+    "express-handlebars": "^3.0.0",
     "method-override": "^2.3.5",
     "morgan": "^1.7.0"
   }
