--- a/cutecats/package.json
+++ b/cutecats/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.5",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "multer": "^1.1.0"
   }
 }
