--- a/cutecats/package.json
+++ b/cutecats/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.5",
     "moment": "^2.12.0",
+    "mongoose": "^4.4.6",
     "morgan": "^1.7.0",
     "multer": "^1.1.0"
   }
